<resources>
    <string name="app_name">MovieApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete_movie_title" >Delete Movie</string>
    <string name="delete_movie_msg" >Are you sure you want to delete the Movie?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save_movie">Save Movie</string>
    <string name="movie_title_hint">Movie Title</string>
    <string name="select_poster">Select Poster</string>
    <string name="description_hint">Description</string>
    <string name="rating_label">Rating:</string>
    <string name="movie_added_toast">Movie Added with %1$.0f stars!</string>
    <string name="fill_all_fields_error">Please fill all fields</string>
    <string name="recommended">Recommended</string>
    <string name="my_movies">My Movies</string>
    <string name="add">Add</string>
    <string name="add_to_my_collection">Add to My Collection</string>
    <string name="update_rating">Update Rating:</string>
    <string name="change_poster">Change Poster</string>
    <string name="edit_movie_details">Edit Movie Details</string>
    <string name="update_title">Update Title</string>
    <string name="update_description">Update Description</string>
    <string name="save_changes">Save Changes</string>
    <string name="fields_cannot_be_empty">Fields cannot be empty</string>
    <string name="movie_updated">Movie Updated!</string>
    <string name="added_to_your_collection">Added to your collection!</string>
    <string name="movie_deleted">Movie deleted</string>
    <string name="confirm_delete">Confirm delete</string>
    <string name="are_you_sure_you_want_to_delete_this_movie">Are you sure you want to delete this movie?</string>
    <string name="click_to_select_image">Click to select image</string>
    <string name="movie_name_hint">Movie Name</string>
    <string name="movie_desc_hint">Overview</string>
    <string name="add_to_favorites">Add to favorites</string>
    <string name="add_to_watchlist">Add to watchlist</string>
    <string name="mark_as_watched">Mark as watched</string>
    <string name="discover_movies">Discover Movies</string>
    <string name="nav_favorites">Favorites</string>
    <string name="nav_watchlist">Watchlist</string>
    <string name="nav_search">Search</string>
    <string name="add_manual_movie_desc">Add movie manually</string>
    <string name="share_movie">Share Movie</string>
    <string name="search_hint">Search for movies...</string>
    <string name="no_movies_found">No movies found. Try another search!</string>
    <string name="select_contact_title">Select a contact to share the movie</string>
    <string name="search_contact_hint">Search contact...</string>
    <string name="watch_list_header">Watch List</string>
    <string name="history_header">Viewing History</string>
    <string name="edit_manual_only_error">Only manual entries can be edited</string>
    <string name="share_movie_message">Hey! I recommend watching the movie: %1$s. It\'s great!</string>
    <string name="error_cannot_send_sms">Cannot open messaging app</string>
    <string name="permission_denied_contacts">Permission denied to read contacts</string>
    <string name="removed_from_favorites">Removed from favorites</string>
    <string name="movie_saved_successfully">Movie saved successfully!</string>
    <string name="please_fill_in_all_fields">Please fill in all fields</string>
    <string name="please_select_a_poster">Please select a movie poster</string>

    <string name="movie_deleted_success">Movie Deleted</string>
    <string name="cannot_delete_api_error">Cannot delete API movies</string>
    <string name="cannot_delete_api_movies">Cannot delete API movies</string>
    <string name="remove_from_favorites">Remove from Favorites</string>
    <string name="mark_as_unwatched">Mark as Unwatched</string>
    <string name="remove_from_watch_list">Remove from Watch List</string>
    <string name="add_to_watch_list">Add to Watch List</string>
    <string name="permission_denied_to_read_contacts">Permission denied to read contacts</string>
    <string name="removed_from_watch_list">Removed from Watch List</string>
    <string name="removed_from_watch_history">Removed from Watch History</string>
    <string name="no_contacts_found">No contacts found</string>
    <string name="an_error_occurred">An error occurred</string>
    <string name="failed_to_fetch_movie_details_from_api">Failed to fetch movie details from API</string>

</resources>